# Biblioteca-totem

./: .env.example  .gitignore  BARCODES.md  DOCKER_SETUP.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: auth.py  books.py  loans.py  users.py
backend/app/core/: security.py
backend/app/db/: bootstrap.py  init_db.py
backend/app/models/: base.py  book.py  loan.py  user.py
backend/scripts/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  books.ts  client.ts  loans.ts  users.ts
frontend/src/components/: BarcodeInput.tsx  BarcodeScanner.tsx  BookCard.tsx  KioskMenu.tsx  SearchBar.tsx  Toast.tsx
frontend/src/components/admin/: BookSearch.tsx  Statistics.tsx  UserManagement.tsx
frontend/src/pages/: AdminDashboard.tsx  BookInfo.tsx  ExtendFlow.tsx  Home.tsx  Login.tsx  RentFlow.tsx  ReturnFlow.tsx
frontend/src/store/: authStore.ts
frontend/src/styles/: globals.css
